@@ -29,6 +29,7 @@ Version 7.0.1
   - Digest: removed ECDSA from available hash algorithms
   - Bugfix in MemFile::seek
   - Added JSON-Parser
+  - String: added method useadr
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
